--- a/css/slider.css
+++ b/css/slider.css
@@ -52,7 +52,7 @@
     height: 3rem;
     transform: translateY(-50%);
     cursor:pointer;
-    z-index: 999999;
+    z-index: 9999;
     border: 2px solid rgba(196,25,137,1);
 }
 
